@@ -1,3 +1,8 @@
+2011-03-08  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclResult.c (ResetObjResult):	Correct failure to clear
+	invalid intrep.  Thanks to Colin McDonald. [Bug 3202905]
+
 2011-03-07  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tclUnixInit: 
